Update Personal Site

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
       class="bg-red-800 text-white text-3xl font-bold px-6 py-4 flex items-center flex-initial justify-between"
     >
       <div class="hover:text-[#e3dcd2]">
-        <a href="https://github.com/CodeKnight314">RICHARD TANG</a>
+        <a href="index.html">RICHARD TANG</a>
       </div>
 
       <div class="flex space-x-6">
-        <a href="" class="hover:text-[#e3dcd2] px-3 py-2">About Me</a>
-        <a href="" class="hover:text-[#e3dcd2] px-3 py-2"> Projects</a>
+        <a href="#about" class="hover:text-[#e3dcd2] px-3 py-2">About Me</a>
+        <a href="projects.html" class="hover:text-[#e3dcd2] px-3 py-2"> Projects</a>
         <a href="" class="hover:text-[#e3dcd2] px-3 py-2"> Resume</a>
       </div>
     </nav>
