Add AMSTRA to project page

--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,28 @@
           </div>
         </div>
 
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-8" data-tags="Computer Vision">
+          <div class="flex flex-col md:flex-row gap-6">
+            <div class="md:w-2/5">
+              <img src="assets/amstra.gif" atl="Project Photo" class="rounded-lg w-full">
+            </div>
+            <div class="md:w-3/5 space-y-4">
+              <div class="flex justify-between items-center">
+                <a href="https://github.com/CodeKnight314/AMSTRA" target="_blank" class="text-3xl font-bold hover:underline">
+                  AMSTRA 
+                </a>
+              <span class="status-completed text-sm font-medium text-white bg-green-500 px-3 py-1 rounded-full">Completed</span>
+              </div>
+              <div class="flex flex-wrap gap-2">
+                <span class="bg-blue-200 text-blue-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded">Computer Vision</span>
+              </div>
+              <p class="text-lg text-gray-700">
+                AMSTRA is a designed framework for autonomous and manually controlled drone navigation with real-time object detection and spatial tagging modules. It leverages YoloV8 and SORT-based manager to identify, and track objects of interest. A separate triangulation module uses monocular camera stream to attempt 3D spatial tagging of detected objects. The system is designed for real-time operation, featuring a server-client architecture to balance computation load.
+              </p>
+            </div>
+          </div>
+        </div>
+
         
     </div>
 
