Update project page

--- a/projects.html
+++ b/projects.html
@@ -300,7 +300,7 @@
             </div>
             <div class="md:w-3/5 space-y-4">
               <div class="flex justify-between items-center">
-                <a href="https://github.com/CodeKnight314/ESRGAN-pytorch" target="_blank" class="text-3xl font-bold hover:underline">
+                <a href="https://github.com/CodeKnight314/Chess-Engine-Cognitus" target="_blank" class="text-3xl font-bold hover:underline">
                   Cognitus: Python-based Chess Engine with Alpha-beta Pruning
                 </a>
               <span class="status-completed text-sm font-medium text-white bg-green-500 px-3 py-1 rounded-full">Completed</span>
@@ -398,6 +398,28 @@
               </div>
               <p class="text-lg text-gray-700">
                 This project provides an educational framework for fine-tuning the Stable Diffusion model via HuggingFace, supporting both conditional and unconditional image training. Instead of re-implementing Stable Diffusion from scratch, it offers a lightweight, configurable class for efficient fine-tuning tasks. Future extensions aim to cover image-to-image translation, inpainting, and related applications.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-8" data-tags="Misc">
+          <div class="flex flex-col md:flex-row gap-6">
+            <div class="md:w-2/5">
+              <img src="assets/cognitus.png" atl="Project Photo" class="rounded-lg w-full">
+            </div>
+            <div class="md:w-3/5 space-y-4">
+              <div class="flex justify-between items-center">
+                <a href="https://github.com/CodeKnight314/FFT-Audio-Visualization" target="_blank" class="text-3xl font-bold hover:underline">
+                  Fast Fourier Transformation for Audio Visualization
+                </a>
+              <span class="status-completed text-sm font-medium text-white bg-green-500 px-3 py-1 rounded-full">Completed</span>
+              </div>
+              <div class="flex flex-wrap gap-2">
+                <span class="bg-gray-200 text-gray-800 text-sm font-medium mr-2 px-2.5 py-0.5 rounded">Misc</span>
+              </div>
+              <p class="text-lg text-gray-700">
+                This project demonstrates the use of Fast Fourier Transform (FFT) to decompose audio signals into their frequency components. It includes a rendering pipeline (render.py) that converts MP3 audio into frame-by-frame visualizations of normalized magnitude vs. frequency, compiled into an MP4 video matching the audio duration. A sample 60 fps rendered video is provided for reference.
               </p>
             </div>
           </div>
