Update reference for FFT

--- a/projects.html
+++ b/projects.html
@@ -406,7 +406,7 @@
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-8" data-tags="Misc">
           <div class="flex flex-col md:flex-row gap-6">
             <div class="md:w-2/5">
-              <img src="assets/cognitus.png" atl="Project Photo" class="rounded-lg w-full">
+              <img src="assets/audio_visual.gif" atl="Project Photo" class="rounded-lg w-full">
             </div>
             <div class="md:w-3/5 space-y-4">
               <div class="flex justify-between items-center">
