--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
 
-    <div class="max-w-4xl mx-auto mt-20 px-6 space-y-12 page-transition">
+    <div class="max-w-4xl mx-auto mt-20 px-6 space-y-12">
       <h1 class="text-4xl font-bold text-center">My Projects</h1>
 
       <!-- Filter Buttons -->
@@ -77,7 +77,7 @@
 
       <div id="projects-container">
         <!-- Project 1 -->
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Reinforcement Learning">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
             <img src="assets/goal_rl.gif" alt="Goal Conditioned Framework" class="project-thumbnail" onclick="openModal('assets/goal_rl.gif', 'Goal Conditioned Framework')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/amstra.gif" alt="AMSTRA" class="project-thumbnail" onclick="openModal('assets/amstra.gif', 'AMSTRA')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -119,7 +119,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/genitext.gif" alt="GenIText" class="project-thumbnail" onclick="openModal('assets/genitext.gif', 'GenIText')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -140,7 +140,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Reinforcement Learning">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
             <img src="assets/mujrl.gif" alt="MujRL" class="project-thumbnail" onclick="openModal('assets/mujrl.gif', 'MujRL')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -161,7 +161,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Reinforcement Learning">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
             <img src="assets/space_invaders_egm.gif" alt="Space Invaders DQN" class="project-thumbnail" onclick="openModal('assets/space_invaders_egm.gif', 'Towards Efficient Deep Q-Learning for Space Invaders')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -182,7 +182,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/cnn_posenet.gif" alt="CNN PoseNet Suite" class="project-thumbnail" onclick="openModal('assets/cnn_posenet.gif', 'CNN PoseNet Suite')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -203,7 +203,7 @@
           </div>
         </div>
         
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/unet_seg.png" alt="UNet Segmentation" class="project-thumbnail" onclick="openModal('assets/unet_seg.png', 'UNet Image Segmentation for Aerial Imagery of Dubai')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -224,7 +224,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/unet_denoise.png" alt="UNet Denoising" class="project-thumbnail" onclick="openModal('assets/unet_denoise.png', 'UNet Image Denoising for COCO Dataset')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -245,7 +245,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/nerf.gif" alt="NeRF Implementation" class="project-thumbnail" onclick="openModal('assets/nerf.gif', 'Neural Radiance Field Implementation')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -266,7 +266,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/esrgan.gif" alt="ESRGAN" class="project-thumbnail" onclick="openModal('assets/esrgan.gif', 'Enhanced Super-Resolution Generative Adversarial Network')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -287,7 +287,7 @@
           </div>
         </div>
         
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Misc">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Misc">
           <div class="relative mb-6">
             <img src="assets/cognitus.png" alt="Cognitus Chess Engine" class="project-thumbnail" onclick="openModal('assets/cognitus.png', 'Cognitus: Python-based Chess Engine with Alpha-beta Pruning')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -308,7 +308,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/canny_edge.gif" alt="Canny Edge Detection" class="project-thumbnail" onclick="openModal('assets/canny_edge.gif', 'Canny-Edge Detection')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -329,7 +329,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Reinforcement Learning">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
             <img src="assets/traffic_rl.gif" alt="Traffic Control RL" class="project-thumbnail" onclick="openModal('assets/traffic_rl.gif', 'Traffic Control with Reinforcement Learning')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -350,7 +350,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Reinforcement Learning">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
             <img src="assets/c_lander_video.gif" alt="Lunar Lander" class="project-thumbnail" onclick="openModal('assets/c_lander_video.gif', 'Lunar Lander with varying action space using Actor-Critic model')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -371,7 +371,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Computer Vision">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
             <img src="assets/stable_diffusion.gif" alt="Stable Diffusion" class="project-thumbnail" onclick="openModal('assets/stable_diffusion.gif', 'Custom Fine-tuning Framework for Stable-Diffusion')">
             <div class="thumbnail-overlay">Click to expand</div>
@@ -392,7 +392,7 @@
           </div>
         </div>
 
-        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 page-transition" data-tags="Misc">
+        <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Misc">
           <div class="relative mb-6">
             <img src="assets/audio_visual.gif" alt="FFT Audio Visualization" class="project-thumbnail" onclick="openModal('assets/audio_visual.gif', 'Fast Fourier Transformation for Audio Visualization')">
             <div class="thumbnail-overlay">Click to expand</div>
