Update project page

--- a/projects.html
+++ b/projects.html
@@ -23,6 +23,10 @@
 
     <link rel="stylesheet" href="projects.css">
 
+    <link rel="preload" href="assets/goal_rl.gif" as="image">
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 
   </head>
   <body class="bg-[#e3dcd2]">
@@ -79,7 +83,7 @@
         <!-- Project 1 -->
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
-            <img src="assets/goal_rl.gif" alt="Goal Conditioned Framework" class="project-thumbnail" onclick="openModal('assets/goal_rl.gif', 'Goal Conditioned Framework')">
+            <img src="assets/goal_rl.gif" alt="Goal Conditioned Framework" class="project-thumbnail lazy" loading="lazy" onclick="openModal('assets/goal_rl.gif', 'Goal Conditioned Framework')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -100,7 +104,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/amstra.gif" alt="AMSTRA" class="project-thumbnail" onclick="openModal('assets/amstra.gif', 'AMSTRA')">
+            <img src="assets/amstra.gif" alt="AMSTRA" class="project-thumbnail" loading="lazy" onclick="openModal('assets/amstra.gif', 'AMSTRA')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -121,7 +125,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/genitext.gif" alt="GenIText" class="project-thumbnail" onclick="openModal('assets/genitext.gif', 'GenIText')">
+            <img src="assets/genitext.gif" alt="GenIText" class="project-thumbnail" loading="lazy" onclick="openModal('assets/genitext.gif', 'GenIText')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -142,7 +146,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
-            <img src="assets/mujrl.gif" alt="MujRL" class="project-thumbnail" onclick="openModal('assets/mujrl.gif', 'MujRL')">
+            <img src="assets/mujrl.gif" alt="MujRL" class="project-thumbnail" loading="lazy" onclick="openModal('assets/mujrl.gif', 'MujRL')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -163,7 +167,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
-            <img src="assets/space_invaders_egm.gif" alt="Space Invaders DQN" class="project-thumbnail" onclick="openModal('assets/space_invaders_egm.gif', 'Towards Efficient Deep Q-Learning for Space Invaders')">
+            <img src="assets/space_invaders_egm.gif" alt="Space Invaders DQN" class="project-thumbnail" loading="lazy" onclick="openModal('assets/space_invaders_egm.gif', 'Towards Efficient Deep Q-Learning for Space Invaders')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -184,7 +188,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/cnn_posenet.gif" alt="CNN PoseNet Suite" class="project-thumbnail" onclick="openModal('assets/cnn_posenet.gif', 'CNN PoseNet Suite')">
+            <img src="assets/cnn_posenet.gif" alt="CNN PoseNet Suite" class="project-thumbnail" loading="lazy" onclick="openModal('assets/cnn_posenet.gif', 'CNN PoseNet Suite')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -205,7 +209,7 @@
         
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/unet_seg.png" alt="UNet Segmentation" class="project-thumbnail" onclick="openModal('assets/unet_seg.png', 'UNet Image Segmentation for Aerial Imagery of Dubai')">
+            <img src="assets/unet_seg.png" alt="UNet Segmentation" class="project-thumbnail" loading="lazy" onclick="openModal('assets/unet_seg.png', 'UNet Image Segmentation for Aerial Imagery of Dubai')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -226,7 +230,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/unet_denoise.png" alt="UNet Denoising" class="project-thumbnail" onclick="openModal('assets/unet_denoise.png', 'UNet Image Denoising for COCO Dataset')">
+            <img src="assets/unet_denoise.png" alt="UNet Denoising" class="project-thumbnail" loading="lazy" onclick="openModal('assets/unet_denoise.png', 'UNet Image Denoising for COCO Dataset')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -247,7 +251,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/nerf.gif" alt="NeRF Implementation" class="project-thumbnail" onclick="openModal('assets/nerf.gif', 'Neural Radiance Field Implementation')">
+            <img src="assets/nerf.gif" alt="NeRF Implementation" class="project-thumbnail" loading="lazy" onclick="openModal('assets/nerf.gif', 'Neural Radiance Field Implementation')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -268,7 +272,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/esrgan.gif" alt="ESRGAN" class="project-thumbnail" onclick="openModal('assets/esrgan.gif', 'Enhanced Super-Resolution Generative Adversarial Network')">
+            <img src="assets/esrgan.gif" alt="ESRGAN" class="project-thumbnail" loading="lazy" onclick="openModal('assets/esrgan.gif', 'Enhanced Super-Resolution Generative Adversarial Network')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -289,7 +293,7 @@
         
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Misc">
           <div class="relative mb-6">
-            <img src="assets/cognitus.png" alt="Cognitus Chess Engine" class="project-thumbnail" onclick="openModal('assets/cognitus.png', 'Cognitus: Python-based Chess Engine with Alpha-beta Pruning')">
+            <img src="assets/cognitus.png" alt="Cognitus Chess Engine" class="project-thumbnail" loading="lazy" onclick="openModal('assets/cognitus.png', 'Cognitus: Python-based Chess Engine with Alpha-beta Pruning')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -310,7 +314,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/canny_edge.gif" alt="Canny Edge Detection" class="project-thumbnail" onclick="openModal('assets/canny_edge.gif', 'Canny-Edge Detection')">
+            <img src="assets/canny_edge.gif" alt="Canny Edge Detection" class="project-thumbnail" loading="lazy" onclick="openModal('assets/canny_edge.gif', 'Canny-Edge Detection')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -331,7 +335,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
-            <img src="assets/traffic_rl.gif" alt="Traffic Control RL" class="project-thumbnail" onclick="openModal('assets/traffic_rl.gif', 'Traffic Control with Reinforcement Learning')">
+            <img src="assets/traffic_rl.gif" alt="Traffic Control RL" class="project-thumbnail" loading="lazy" onclick="openModal('assets/traffic_rl.gif', 'Traffic Control with Reinforcement Learning')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -352,7 +356,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Reinforcement Learning">
           <div class="relative mb-6">
-            <img src="assets/c_lander_video.gif" alt="Lunar Lander" class="project-thumbnail" onclick="openModal('assets/c_lander_video.gif', 'Lunar Lander with varying action space using Actor-Critic model')">
+            <img src="assets/c_lander_video.gif" alt="Lunar Lander" class="project-thumbnail" loading="lazy" onclick="openModal('assets/c_lander_video.gif', 'Lunar Lander with varying action space using Actor-Critic model')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -373,7 +377,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Computer Vision">
           <div class="relative mb-6">
-            <img src="assets/stable_diffusion.gif" alt="Stable Diffusion" class="project-thumbnail" onclick="openModal('assets/stable_diffusion.gif', 'Custom Fine-tuning Framework for Stable-Diffusion')">
+            <img src="assets/stable_diffusion.gif" alt="Stable Diffusion" class="project-thumbnail" loading="lazy" onclick="openModal('assets/stable_diffusion.gif', 'Custom Fine-tuning Framework for Stable-Diffusion')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
@@ -394,7 +398,7 @@
 
         <div class="project-card bg-white rounded-lg shadow-lg p-6 mb-6 " data-tags="Misc">
           <div class="relative mb-6">
-            <img src="assets/audio_visual.gif" alt="FFT Audio Visualization" class="project-thumbnail" onclick="openModal('assets/audio_visual.gif', 'Fast Fourier Transformation for Audio Visualization')">
+            <img src="assets/audio_visual.gif" alt="FFT Audio Visualization" class="project-thumbnail" loading="lazy" onclick="openModal('assets/audio_visual.gif', 'Fast Fourier Transformation for Audio Visualization')">
             <div class="thumbnail-overlay">Click to expand</div>
           </div>
           <div class="space-y-4">
