Add clustering project

--- a/projects.html
+++ b/projects.html
@@ -431,6 +431,28 @@
             <a class="inline-flex items-center text-sm gap-2 whitespace-nowrap rounded-md font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:scale-105 transition-all duration-300 hover:bg-red-800 hover:text-white h-10 px-4 py-2 w-full justify-between text-white bg-red-800" href="https://github.com/CodeKnight314/FFT-Audio-Visualization" target="_blank">View Project<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right h-4 w-4 transition-transform duration-300 group-hover:translate-x-1 group-hover:-translate-y-1"><path d="M7 7h10v10"></path><path d="M7 17 17 7"></path></svg></a>
           </div>
         </div>
+
+        <div class="project-card group relative flex flex-col rounded-xl border border-gray-200 overflow-hidden transition-all hover:border-red-800/50 hover:shadow-xl hover:shadow-red-800/5 opacity-0 animate-fade-in" style="background-color: #FDFDFD; animation-delay: 1500ms; animation-play-state: running;" data-tags="Computer Vision">
+          <a href="https://github.com/CodeKnight314/Image-clustering.git" target="_blank">
+            <div class="relative overflow-hidden" style="aspect-ratio: 16 / 9;">
+              <img alt="Image-clustering html display" loading="lazy" decoding="async" class="object-cover transition-transform duration-700 group-hover:scale-110" src="assets/clustering.gif" style="position: absolute; height: 100%; width: 100%; inset: 0px; color: transparent;">
+              <div class="absolute inset-0 bg-gradient-to-t from-black/20 to-transparent opacity-0 group-hover:opacity-60 transition-opacity duration-500"></div>
+            </div>
+          </a>
+          <div class="flex-1 p-6 space-y-3 relative">
+            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors bg-gray-200 text-gray-800 absolute -top-2 left-3 z-10">Misc</div>
+            <h3 class="text-xl font-bold group-hover:text-red-800 transition-colors duration-300">Image Clustering with Resnet18</h3>
+            <p class="text-gray-600 line-clamp-2">Image clustering with Resnet18. The project focuses on clustering the images into clusters based on their features using KMeans clustering. The project supports html display of 3D visualiazation results</p>
+            <div class="flex flex-wrap gap-2 pt-2">
+              <div class="inline-flex items-center border px-2.5 py-0.5 text-xs font-semibold transition-colors border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 rounded-full">Python</div>
+              <div class="inline-flex items-center border px-2.5 py-0.5 text-xs font-semibold transition-colors border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 rounded-full">PyTorch</div>
+              <div class="inline-flex items-center border px-2.5 py-0.5 text-xs font-semibold transition-colors border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 rounded-full">HTML</div>
+            </div>
+          </div>
+          <div class="p-6 pt-0 mt-auto">
+            <a class="inline-flex items-center text-sm gap-2 whitespace-nowrap rounded-md font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:scale-105 transition-all duration-300 hover:bg-red-800 hover:text-white h-10 px-4 py-2 w-full justify-between text-white bg-red-800" href="https://github.com/CodeKnight314/FFT-Audio-Visualization" target="_blank">View Project<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right h-4 w-4 transition-transform duration-300 group-hover:translate-x-1 group-hover:-translate-y-1"><path d="M7 7h10v10"></path><path d="M7 17 17 7"></path></svg></a>
+          </div>
+        </div>
     </div>
 
     <script src="projects.js"></script>
