--- a/projects.html
+++ b/projects.html
@@ -440,7 +440,7 @@
             </div>
           </a>
           <div class="flex-1 p-6 space-y-3 relative">
-            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors bg-gray-200 text-gray-800 absolute -top-2 left-3 z-10">Misc</div>
+            <div class="inline-flex items-center rounded-full border px-2.5 py-0.5 text-xs font-semibold transition-colors bg-blue-200 text-blue-800 absolute -top-2 left-3 z-10">Computer Vision</div>
             <h3 class="text-xl font-bold group-hover:text-red-800 transition-colors duration-300">Image Clustering with Resnet18</h3>
             <p class="text-gray-600 line-clamp-2">Image clustering with Resnet18. The project focuses on clustering the images into clusters based on their features using KMeans clustering. The project supports html display of 3D visualiazation results</p>
             <div class="flex flex-wrap gap-2 pt-2">
